src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root,
  :root[data-theme='dracula'] {
    --editor-primary-color: 40 42 54;
    --editor-secondary-color: 48 50 64;
    --editor-border-color: 65 66 78;
    --editor-accent-color: 100 203 41;
    --editor-accent-light-color: 131 213 84;
    --editor-text-color: 248 248 242;
    --editor-line-numbers-color: 108 108 108;
    --editor-gutter-color: 44 46 59;
    --editor-scroll-thumb-color: 235 235 235 / 20%;
    --editor-scroll-thumb-hover-color: 153, 153, 153;
    --editor-font-family: 'Roboto', sans-serif;
    --editor-code-font-family: 'Fira Code', monospace;
    --font-mono: 'Source Code Pro', 'Andale Mono WT', 'Andale Mono', Menlo, 'Lucida Console',
      'Lucida Sans Typewriter', Monaco, monospace;
    --font-sans: 'Source Sans 3', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    --editor-code-font-size: 16px;
    --editor-code-selection-color: 215 212 240;
    --editor-ring: 203 213 225;
    --splitter-hover-color: rgb(var(--editor-accent-color));
  }

  :root[data-theme='light'] {
    --editor-primary-color: 255 255 255;
    --editor-secondary-color: 240 240 240;
    --editor-border-color: 234 234 234;
    --editor-line-numbers-color: 108 108 108;
    --editor-gutter-color: 240 240 240;
    --editor-text-color: 0 0 0;
  }

  [data-panel-group]:has(> [data-resize-handle-active]) > .animated-panel {
    transition: none;
  }
}

@layer components {
  .animated-panel {
    transition: flex 0.15s ease-in-out;
    will-change: flex;
  }

  @media (hover: hover) {
    .fancy-scrollbar::-webkit-scrollbar-thumb {
      background-color: rgb(var(--editor-scroll-thumb-color));
      border: 4px solid transparent;
      border-radius: 4px;
      background-clip: padding-box;
    }

    .fancy-scrollbar::-webkit-scrollbar-thumb:hover {
      background-color: rgb(var(--editor-scroll-thumb-hover-color));
      transition: background-color 1s ease-in-out;
    }

    .fancy-scrollbar::-webkit-scrollbar {
      width: 16px;
    }
  }
}

@layer utilities {
  .absolute-y-center {
    @apply absolute top-1/2 -translate-y-1/2;
  }

  .absolute-x-center {
    @apply absolute left-1/2 -translate-x-1/2;
  }

  .absolute-center {
    @apply absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2;
  }
}

.cm-scroller {
  @apply fancy-scrollbar;
}

